--- a/CT4.ipynb
+++ b/CT4.ipynb
@@ -395,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 223,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-14T06:23:05.591182Z",
-     "start_time": "2022-08-14T06:23:05.405263Z"
+     "end_time": "2022-08-14T08:18:49.384644Z",
+     "start_time": "2022-08-14T08:18:49.216689Z"
     }
    },
    "outputs": [],
@@ -414,7 +414,7 @@
     "#appends list then pops for 200 iterations\n",
     "count = 0\n",
     "while count < 25000:\n",
-    "    queue.insert(0,random.sample(random_wordlist,1)[0])\n",
+    "    queue.append(random.sample(random_wordlist,1)[0])\n",
     "    queue.pop()\n",
     "    count += 1"
    ]
