--- a/CT5.ipynb
+++ b/CT5.ipynb
@@ -2,25 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-18T05:23:15.928344Z",
-     "start_time": "2022-08-18T05:23:15.924596Z"
+     "end_time": "2022-08-19T04:08:17.869348Z",
+     "start_time": "2022-08-19T04:08:17.855294Z"
     }
    },
    "outputs": [],
    "source": [
-    "from linearprobinghashtable import LinearProbingHashTable"
+    "from linearprobinghashtable import LinearProbingHashTable\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-18T05:32:18.641297Z",
-     "start_time": "2022-08-18T05:32:18.629501Z"
+     "end_time": "2022-08-19T04:11:47.444687Z",
+     "start_time": "2022-08-19T04:11:47.437682Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Main program to test HashTable classes\n",
+    "keys = [ 35, 0, 22, 94, 220, 110, 4 ]\n",
+    "#keys = random.sample(range(10000),10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-19T04:11:51.484098Z",
+     "start_time": "2022-08-19T04:11:51.476893Z"
     }
    },
    "outputs": [
@@ -61,10 +78,8 @@
     }
    ],
    "source": [
-    "# Main program to test HashTable classes\n",
-    "keys = [ 35, 0, 22, 94, 220, 110, 4 ]\n",
     "#chaining = ChainingHashTable()\n",
-    "linear_probing = LinearProbingHashTable()\n",
+    "linear_probing = LinearProbingHashTable(initial_capacity=10)\n",
     "#double_hashing = DoubleHashingHashTable()\n",
     "for key in keys:\n",
     "   #chaining.insert(key)\n",
