--- a/CT5.ipynb
+++ b/CT5.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-19T04:11:51.484098Z",
-     "start_time": "2022-08-19T04:11:51.476893Z"
+     "end_time": "2022-08-19T04:27:27.987492Z",
+     "start_time": "2022-08-19T04:27:27.970233Z"
     }
    },
    "outputs": [
@@ -60,7 +60,7 @@
       "   --------\n",
       "\n",
       "=======================================\n",
-      "Linear Probing: after removing 0:\n",
+      "Linear Probing: adding the same keys:\n",
       "   --------\n",
       " 0:|  0   |\n",
       " 1:| 220  |\n",
@@ -112,12 +112,89 @@
     "#print(chaining)\n",
     "#print()\n",
     "\n",
-    "print (\"Linear Probing: after removing 0:\")\n",
+    "print (\"Linear Probing: adding the same keys:\")\n",
     "print(linear_probing)\n",
     "print()\n",
     "\n",
     "#print (\"Double Hashing: after removing 0:\")\n",
     "#print(double_hashing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-19T07:14:57.685535Z",
+     "start_time": "2022-08-19T07:14:57.681446Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "linear_probing2 = LinearProbingHashTable(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-19T07:15:41.933820Z",
+     "start_time": "2022-08-19T07:15:41.929882Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for key in keys:\n",
+    "   #chaining.insert(key)\n",
+    "   linear_probing2.insert(key)\n",
+    "    \n",
+    "for key in keys:\n",
+    "   #chaining.insert(key)\n",
+    "   linear_probing2.insert(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-19T07:15:42.760688Z",
+     "start_time": "2022-08-19T07:15:42.755557Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   --------\n",
+      " 0:|  0   |\n",
+      " 1:| 220  |\n",
+      " 2:|  22  |\n",
+      " 3:|  0   |\n",
+      " 4:|  4   |\n",
+      " 5:|  22  |\n",
+      " 6:| 220  |\n",
+      " 7:|  4   |\n",
+      " 8:| E/S  |\n",
+      " 9:| E/S  |\n",
+      "10:| 110  |\n",
+      "11:| 110  |\n",
+      "12:| E/S  |\n",
+      "13:| E/S  |\n",
+      "14:|  94  |\n",
+      "15:|  35  |\n",
+      "16:|  35  |\n",
+      "17:|  94  |\n",
+      "18:| E/S  |\n",
+      "19:| E/S  |\n",
+      "   --------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(linear_probing2)"
    ]
   },
   {
