updated print arg

--- a/CT6.ipynb
+++ b/CT6.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:19:56.412797Z",
-     "start_time": "2022-08-24T08:19:56.408053Z"
+     "end_time": "2022-08-24T08:22:47.565171Z",
+     "start_time": "2022-08-24T08:22:47.559745Z"
     }
    },
    "outputs": [],
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:19:57.432776Z",
-     "start_time": "2022-08-24T08:19:57.398042Z"
+     "end_time": "2022-08-24T08:46:13.398044Z",
+     "start_time": "2022-08-24T08:46:13.356161Z"
     }
    },
    "outputs": [],
@@ -97,13 +97,13 @@
     "                    else:\n",
     "                        z.p.right=z.left\n",
     "\n",
-    "    '''def bstMinimum(self, x):\n",
+    "    def bstMinimum(self, x):\n",
     "\n",
     "        while x.left != None:\n",
     "            x = x.left\n",
     "        return x\n",
     "\n",
-    "    def BSTinOrder(self, x):\n",
+    "    '''def BSTinOrder(self, x):\n",
     "\n",
     "        if x == None: return\n",
     "        self.BSTinOrder(x.left)\n",
@@ -113,7 +113,7 @@
     "    def bstGetRoot(self):\n",
     "        return self.root\n",
     "\n",
-    "    def print_tree(self, root, val=\"val\", left=\"left\", right=\"right\"):\n",
+    "    def print_tree(self, root, val=\"key\", left=\"left\", right=\"right\"):\n",
     "        def display(root, val=val, left=left, right=right):\n",
     "            \"\"\"Returns list of strings, width, height, and horizontal coordinate of the root.\"\"\"\n",
     "            # No child.\n",
@@ -166,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:12:43.299951Z",
-     "start_time": "2022-08-24T08:12:43.294457Z"
+     "end_time": "2022-08-24T08:46:15.626243Z",
+     "start_time": "2022-08-24T08:46:15.619314Z"
     }
    },
    "outputs": [],
@@ -188,11 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:12:45.002810Z",
-     "start_time": "2022-08-24T08:12:44.997341Z"
+     "end_time": "2022-08-24T08:46:22.095383Z",
+     "start_time": "2022-08-24T08:46:22.089745Z"
     }
    },
    "outputs": [
@@ -209,7 +209,47 @@
     }
    ],
    "source": [
-    "tree.print_tree(tree.bstGetRoot(), val=\"key\")"
+    "tree.print_tree(tree.bstGetRoot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T08:46:27.685580Z",
+     "start_time": "2022-08-24T08:46:27.681533Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tree.bstDelete(tree.BSTsearch(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T08:46:32.777966Z",
+     "start_time": "2022-08-24T08:46:32.764782Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  5  \n",
+      " / \\ \n",
+      " 4 7 \n",
+      "/   \\\n",
+      "2   9\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree.print_tree(tree.bstGetRoot())"
    ]
   },
   {
