--- a/CT6.ipynb
+++ b/CT6.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:22:47.565171Z",
-     "start_time": "2022-08-24T08:22:47.559745Z"
+     "end_time": "2022-08-24T10:01:58.206465Z",
+     "start_time": "2022-08-24T10:01:58.200466Z"
     }
    },
    "outputs": [],
@@ -16,89 +16,85 @@
     "        self.key = x\n",
     "        self.left = None\n",
     "        self.right = None\n",
-    "        self.p = None"
+    "        self.parent = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 155,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:46:13.398044Z",
-     "start_time": "2022-08-24T08:46:13.356161Z"
+     "end_time": "2022-08-24T11:56:35.263502Z",
+     "start_time": "2022-08-24T11:56:35.226295Z"
     }
    },
    "outputs": [],
    "source": [
-    "class BST:\n",
+    "class BinarySearchTree:\n",
     "    def __init__(self):\n",
     "        self.root = None\n",
     "\n",
-    "    def BSTsearch(self,k):\n",
-    "\n",
+    "    def search(self, key):\n",
     "        x = self.root\n",
-    "        while x!=None and x.key!=k:\n",
-    "            if k<x.key:\n",
-    "                x=x.left\n",
+    "        while x != None and x.key != key:\n",
+    "            if key < x.key:\n",
+    "                x = x.left\n",
     "            else:\n",
-    "                x=x.right\n",
+    "                x = x.right\n",
     "        return x\n",
-    "\n",
-    "    def BSTinsert(self, z):\n",
-    "\n",
+    "    \n",
+    "    def insert(self, z):\n",
     "        x = self.root\n",
     "        y = None\n",
     "        while x != None:\n",
-    "            y=x\n",
-    "            if z.key<x.key:\n",
-    "                x=x.left\n",
+    "            y = x\n",
+    "            if z.key < x.key:\n",
+    "                x = x.left\n",
     "            else:\n",
-    "                x=x.right\n",
-    "        z.p=y\n",
-    "        if y==None:\n",
-    "            self.root=z\n",
+    "                x = x.right\n",
+    "        z.parent = y\n",
+    "        if y == None:\n",
+    "            self.root = z\n",
     "        else:\n",
-    "            if z.key<y.key:\n",
-    "                y.left=z\n",
+    "            if z.key < y.key:\n",
+    "                y.left = z\n",
     "            else:\n",
-    "                y.right=z\n",
+    "                y.right = z\n",
     "\n",
-    "    def bstDelete(self, z):\n",
-    "\n",
+    "    def delete(self, z):\n",
     "        if z.left == None and z.right == None:\n",
     "            if z == self.root:\n",
     "                self.root = None\n",
     "            else:\n",
-    "                if z == z.p.left:\n",
-    "                    z.p.left = None\n",
+    "                if z == z.parent.left:\n",
+    "                    z.parent.left = None\n",
     "                else:\n",
-    "                    z.p.right = None\n",
+    "                    z.parent.right = None\n",
     "        elif z.left != None and z.right != None:\n",
     "            y = self.bstMinimum(z.right)\n",
     "            z.key = y.key\n",
-    "            self.bstDelete(y)\n",
+    "            self.delete(y)\n",
     "        else:\n",
     "            if z.left != None:\n",
-    "                z.left.p=z.p\n",
-    "                if z==self.root:\n",
-    "                    self.root=z.left\n",
+    "                z.left.parent = z.parent\n",
+    "                if z == self.root:\n",
+    "                    self.root = z.left\n",
     "                else:\n",
-    "                    if z==z.p.left:\n",
-    "                        z.p.left=z.left\n",
+    "                    if z == z.parent.left:\n",
+    "                        z.parent.left = z.left\n",
     "                    else:\n",
-    "                        z.p.right=z.left\n",
+    "                        z.parent.right = z.left\n",
     "            else:\n",
-    "                z.right.p=z.p\n",
-    "                if z==self.root:\n",
-    "                    self.root=z.right\n",
+    "                z.right.parent = z.parent\n",
+    "                if z == self.root:\n",
+    "                    self.root = z.right\n",
     "                else:\n",
-    "                    if z==z.p.left:\n",
-    "                        z.p.left=z.left\n",
+    "                    if z == z.parent.left:\n",
+    "                        z.parent.left = z.left\n",
     "                    else:\n",
-    "                        z.p.right=z.left\n",
+    "                        z.parent.right = z.left\n",
     "\n",
     "    def bstMinimum(self, x):\n",
-    "\n",
     "        while x.left != None:\n",
     "            x = x.left\n",
     "        return x\n",
@@ -112,7 +108,8 @@
     "\n",
     "    def bstGetRoot(self):\n",
     "        return self.root\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    def print_tree(self, root, val=\"key\", left=\"left\", right=\"right\"):\n",
     "        def display(root, val=val, left=left, right=right):\n",
     "            \"\"\"Returns list of strings, width, height, and horizontal coordinate of the root.\"\"\"\n",
@@ -149,14 +146,17 @@
     "            right, m, q, y = display(getattr(root, right))\n",
     "            s = '%s' % getattr(root, val)\n",
     "            u = len(s)\n",
-    "            first_line = (x + 1) * ' ' + (n - x - 1) * '_' + s + y * '_' + (m - y) * ' '\n",
-    "            second_line = x * ' ' + '/' + (n - x - 1 + u + y) * ' ' + '\\\\' + (m - y - 1) * ' '\n",
+    "            first_line = (x + 1) * ' ' + (n - x - 1) * \\\n",
+    "                '_' + s + y * '_' + (m - y) * ' '\n",
+    "            second_line = x * ' ' + '/' + \\\n",
+    "                (n - x - 1 + u + y) * ' ' + '\\\\' + (m - y - 1) * ' '\n",
     "            if p < q:\n",
     "                left += [n * ' '] * (q - p)\n",
     "            elif q < p:\n",
     "                right += [m * ' '] * (p - q)\n",
     "            zipped_lines = zip(left, right)\n",
-    "            lines = [first_line, second_line] + [a + u * ' ' + b for a, b in zipped_lines]\n",
+    "            lines = [first_line, second_line] + \\\n",
+    "                [a + u * ' ' + b for a, b in zipped_lines]\n",
     "            return lines, n + m + u, max(p, q) + 2, n + u // 2\n",
     "\n",
     "        lines, *_ = display(root, val, left, right)\n",
@@ -166,33 +166,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 128,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:46:15.626243Z",
-     "start_time": "2022-08-24T08:46:15.619314Z"
+     "end_time": "2022-08-24T10:10:45.709072Z",
+     "start_time": "2022-08-24T10:10:45.702229Z"
     }
    },
    "outputs": [],
    "source": [
-    "tree = BST()\n",
-    "tree.BSTinsert(Node(5))\n",
-    "tree.BSTinsert(Node(3))\n",
-    "tree.BSTinsert(Node(7))\n",
-    "tree.BSTinsert(Node(2))\n",
-    "tree.BSTinsert(Node(4))\n",
-    "tree.BSTinsert(Node(9))\n",
+    "tree = BinarySearchTree()\n",
+    "tree.insert(Node(5))\n",
+    "tree.insert(Node(3))\n",
+    "tree.insert(Node(7))\n",
+    "tree.insert(Node(2))\n",
+    "tree.insert(Node(4))\n",
+    "tree.insert(Node(9))\n",
     "\n",
     "#tree.BSTinOrder(tree.bstGetRoot())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:46:22.095383Z",
-     "start_time": "2022-08-24T08:46:22.089745Z"
+     "end_time": "2022-08-24T10:10:46.550834Z",
+     "start_time": "2022-08-24T10:10:46.545539Z"
     }
    },
    "outputs": [
@@ -214,25 +214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 130,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:46:27.685580Z",
-     "start_time": "2022-08-24T08:46:27.681533Z"
+     "end_time": "2022-08-24T10:10:47.238570Z",
+     "start_time": "2022-08-24T10:10:47.234489Z"
     }
    },
    "outputs": [],
    "source": [
-    "tree.bstDelete(tree.BSTsearch(3))"
+    "tree.delete(tree.search(3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 131,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T08:46:32.777966Z",
-     "start_time": "2022-08-24T08:46:32.764782Z"
+     "end_time": "2022-08-24T10:10:48.693608Z",
+     "start_time": "2022-08-24T10:10:48.687919Z"
     }
    },
    "outputs": [
@@ -254,11 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 132,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T07:40:06.866722Z",
-     "start_time": "2022-08-24T07:40:06.858792Z"
+     "end_time": "2022-08-24T10:11:05.791060Z",
+     "start_time": "2022-08-24T10:11:05.784571Z"
     }
    },
    "outputs": [],
@@ -275,16 +275,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 133,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T07:41:11.642656Z",
-     "start_time": "2022-08-24T07:41:11.635154Z"
+     "end_time": "2022-08-24T10:11:06.912089Z",
+     "start_time": "2022-08-24T10:11:06.906513Z"
     }
    },
    "outputs": [],
    "source": [
     "test = build_balanced_tree([1, 2, 3, 4, 5, 6, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T11:56:43.468684Z",
+     "start_time": "2022-08-24T11:56:43.464407Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test = BinarySearchTree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T11:56:45.884084Z",
+     "start_time": "2022-08-24T11:56:45.879076Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "num_list = [4, 2, 1, 3, 6, 5, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T11:56:47.177348Z",
+     "start_time": "2022-08-24T11:56:47.172538Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for num in num_list:\n",
+    "    test.insert(Node(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T11:57:01.921932Z",
+     "start_time": "2022-08-24T11:57:01.915809Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  _4_  \n",
+      " /   \\ \n",
+      " 2   6 \n",
+      "/ \\ / \\\n",
+      "1 3 5 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.print_tree(test.bstGetRoot())"
    ]
   },
   {
