working insert and delete

--- a/CT6.ipynb
+++ b/CT6.ipynb
@@ -42,7 +42,7 @@
     "            else:\n",
     "                x = x.right\n",
     "        return x\n",
-    "    \n",
+    "\n",
     "    def insert(self, z):\n",
     "        x = self.root\n",
     "        y = None\n",
@@ -99,6 +99,7 @@
     "            x = x.left\n",
     "        return x\n",
     "\n",
+    "    \n",
     "    '''def BSTinOrder(self, x):\n",
     "\n",
     "        if x == None: return\n",
@@ -254,89 +255,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 168,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T10:11:05.791060Z",
-     "start_time": "2022-08-24T10:11:05.784571Z"
+     "end_time": "2022-08-24T12:06:47.599407Z",
+     "start_time": "2022-08-24T12:06:47.585396Z"
     }
    },
    "outputs": [],
    "source": [
-    " def build_balanced_tree(array_nums):\n",
-    "        if not array_nums:\n",
-    "            return None\n",
-    "        root = len(array_nums)//2\n",
-    "        node = Node(array_nums[root])\n",
-    "        node.left = build_balanced_tree(array_nums[:root])\n",
-    "        node.right = build_balanced_tree(array_nums[root+1:])\n",
-    "        return node"
+    "def create_list(tree, templist=[]):\n",
+    "    \"\"\"\n",
+    "    creates a list from a binary tree\n",
+    "    \"\"\"\n",
+    "    items = []\n",
+    "    queue = [tree]\n",
+    "\n",
+    "    while queue:\n",
+    "        copy = queue[:]\n",
+    "        queue = []\n",
+    "\n",
+    "        for item in copy:\n",
+    "            if item is None:\n",
+    "                items.append(None)\n",
+    "                queue.append(None)\n",
+    "                queue.append(None)\n",
+    "            else:\n",
+    "                items.append(item.key)\n",
+    "                queue.append(item.left)\n",
+    "                queue.append(item.right)\n",
+    "\n",
+    "        if all((x is None for x in queue)):\n",
+    "            break\n",
+    "\n",
+    "    return items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T10:11:06.912089Z",
-     "start_time": "2022-08-24T10:11:06.906513Z"
+     "end_time": "2022-08-24T12:42:05.293109Z",
+     "start_time": "2022-08-24T12:42:05.286282Z"
     }
    },
    "outputs": [],
    "source": [
-    "test = build_balanced_tree([1, 2, 3, 4, 5, 6, 7])"
+    "def balanced_tree(array_nums):\n",
+    "    if not array_nums:\n",
+    "        return None\n",
+    "    root = len(array_nums)//2\n",
+    "    node = Node(array_nums[root])\n",
+    "    node.left = balanced_tree(array_nums[:root])\n",
+    "    node.right = balanced_tree(array_nums[root+1:])\n",
+    "    return node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 270,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T11:56:43.468684Z",
-     "start_time": "2022-08-24T11:56:43.464407Z"
+     "end_time": "2022-08-24T12:54:09.484696Z",
+     "start_time": "2022-08-24T12:54:09.479922Z"
     }
    },
    "outputs": [],
    "source": [
-    "test = BinarySearchTree()"
+    "test = BinarySearchTree()\n",
+    "num_list = [1, 2, 3, 4, 5, 6, 7]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 271,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T11:56:45.884084Z",
-     "start_time": "2022-08-24T11:56:45.879076Z"
+     "end_time": "2022-08-24T12:54:09.915084Z",
+     "start_time": "2022-08-24T12:54:09.909905Z"
     }
    },
    "outputs": [],
    "source": [
-    "num_list = [4, 2, 1, 3, 6, 5, 7]"
+    "tree = balanced_tree(num_list)\n",
+    "ordered_list = create_list(tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 272,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T11:56:47.177348Z",
-     "start_time": "2022-08-24T11:56:47.172538Z"
+     "end_time": "2022-08-24T12:54:10.384756Z",
+     "start_time": "2022-08-24T12:54:10.381392Z"
     }
    },
    "outputs": [],
    "source": [
-    "for num in num_list:\n",
+    "for num in ordered_list:\n",
     "    test.insert(Node(num))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 273,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T11:57:01.921932Z",
-     "start_time": "2022-08-24T11:57:01.915809Z"
+     "end_time": "2022-08-24T12:54:12.467815Z",
+     "start_time": "2022-08-24T12:54:12.462410Z"
     }
    },
    "outputs": [
@@ -354,6 +381,34 @@
    ],
    "source": [
     "test.print_tree(test.bstGetRoot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T12:53:50.659571Z",
+     "start_time": "2022-08-24T12:53:50.655877Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test.delete(test.search(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T12:53:31.996960Z",
+     "start_time": "2022-08-24T12:53:31.992553Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test.insert(Node(8))"
    ]
   },
   {
