--- a/CT6.ipynb
+++ b/CT6.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 274,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T11:56:35.263502Z",
-     "start_time": "2022-08-24T11:56:35.226295Z"
+     "end_time": "2022-08-24T13:02:02.432636Z",
+     "start_time": "2022-08-24T13:02:02.385024Z"
     }
    },
    "outputs": [],
@@ -98,14 +98,10 @@
     "        while x.left != None:\n",
     "            x = x.left\n",
     "        return x\n",
-    "\n",
     "    \n",
-    "    '''def BSTinOrder(self, x):\n",
-    "\n",
-    "        if x == None: return\n",
-    "        self.BSTinOrder(x.left)\n",
-    "        print(x.key)\n",
-    "        self.BSTinOrder(x.right)'''\n",
+    "    def build_tree(self,ordered_list):\n",
+    "        for num in ordered_list:\n",
+    "            self.insert(Node(num))\n",
     "\n",
     "    def bstGetRoot(self):\n",
     "        return self.root\n",
@@ -314,26 +310,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 295,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T12:54:09.484696Z",
-     "start_time": "2022-08-24T12:54:09.479922Z"
+     "end_time": "2022-08-24T13:15:01.182928Z",
+     "start_time": "2022-08-24T13:15:01.177892Z"
     }
    },
    "outputs": [],
    "source": [
     "test = BinarySearchTree()\n",
-    "num_list = [1, 2, 3, 4, 5, 6, 7]"
+    "#num_list = [1, 2, 3, 4, 5, 6, 7]\n",
+    "num_list = sorted([5, 3, 7, 2, 4, 9, 10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 296,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T12:54:09.915084Z",
-     "start_time": "2022-08-24T12:54:09.909905Z"
+     "end_time": "2022-08-24T13:15:06.167411Z",
+     "start_time": "2022-08-24T13:15:06.162760Z"
     }
    },
    "outputs": [],
@@ -344,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 299,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T12:54:10.384756Z",
-     "start_time": "2022-08-24T12:54:10.381392Z"
+     "end_time": "2022-08-24T13:15:57.208618Z",
+     "start_time": "2022-08-24T13:15:57.204654Z"
     }
    },
    "outputs": [],
@@ -359,11 +356,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 286,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T12:54:12.467815Z",
-     "start_time": "2022-08-24T12:54:12.462410Z"
+     "end_time": "2022-08-24T13:13:40.471406Z",
+     "start_time": "2022-08-24T13:13:40.466989Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def build_tree(self,ordered_list):\n",
+    "    for num in ordered_list:\n",
+    "        self.insert(Node(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T13:15:14.075783Z",
+     "start_time": "2022-08-24T13:15:14.072170Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test.build_tree(ordered_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-24T13:15:16.079786Z",
+     "start_time": "2022-08-24T13:15:16.056324Z"
     }
    },
    "outputs": [
@@ -371,11 +398,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  _4_  \n",
-      " /   \\ \n",
-      " 2   6 \n",
-      "/ \\ / \\\n",
-      "1 3 5 7\n"
+      "  _5_   \n",
+      " /   \\  \n",
+      " 3   9_ \n",
+      "/ \\ /  \\\n",
+      "2 4 7 10\n"
      ]
     }
    ],
