--- a/CT6.ipynb
+++ b/CT6.ipynb
@@ -341,6 +341,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-25T05:00:03.550179Z",
+     "start_time": "2022-08-25T05:00:03.543952Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def initialize_tree(num_list):\n",
+    "    num_list = sorted(num_list)\n",
+    "    tree = BinarySearchTree()\n",
+    "    btree = balanced_tree(num_list)\n",
+    "    ordered_list = create_list(btree)\n",
+    "    return tree, ordered_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-25T05:00:50.068726Z",
+     "start_time": "2022-08-25T05:00:50.063434Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test2, list2 = initialize_tree([5, 3, 7, 2, 4, 9, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 299,
    "metadata": {
     "ExecuteTime": {
@@ -436,6 +469,46 @@
    "outputs": [],
    "source": [
     "test.insert(Node(8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-25T05:01:26.858853Z",
+     "start_time": "2022-08-25T05:01:26.854874Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test2.build_tree(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-25T05:01:45.261298Z",
+     "start_time": "2022-08-25T05:01:45.255475Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  _5_   \n",
+      " /   \\  \n",
+      " 3   9_ \n",
+      "/ \\ /  \\\n",
+      "2 4 7 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2.print_tree(test2.bstGetRoot())"
    ]
   },
   {
