--- a/Portfolio Project/Portfolio_project_test.ipynb
+++ b/Portfolio Project/Portfolio_project_test.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-01T20:33:53.011305Z",
-     "start_time": "2022-09-01T20:33:53.004698Z"
+     "end_time": "2022-09-11T20:10:45.080828Z",
+     "start_time": "2022-09-11T20:10:45.073996Z"
     }
    },
    "outputs": [],
@@ -75,21 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-02T19:23:28.428484Z",
-     "start_time": "2022-09-02T19:23:27.571813Z"
+     "end_time": "2022-09-11T20:10:49.721836Z",
+     "start_time": "2022-09-11T20:10:48.878595Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "226407"
+       "418833"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,6 +1344,284 @@
    ],
    "source": [
     "sorted(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:14:14.590211Z",
+     "start_time": "2022-09-11T20:14:14.586213Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:15:17.827157Z",
+     "start_time": "2022-09-11T20:15:17.605756Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "two_dim_array = np.reshape(numbers, (-1, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:15:20.339779Z",
+     "start_time": "2022-09-11T20:15:20.330589Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[669977,  80191, 844939, 347594, 130014],\n",
+       "       [806439, 876307, 782956, 203027,  66314],\n",
+       "       [292650, 825334, 168374, 970811, 805749],\n",
+       "       ...,\n",
+       "       [995621, 615895, 811341, 343404,  54371],\n",
+       "       [752497, 520696,  30916, 463070, 336967],\n",
+       "       [233796, 149047, 560999, 927202, 418833]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_dim_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:15:46.103185Z",
+     "start_time": "2022-09-11T20:15:46.096886Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(two_dim_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:17:22.423758Z",
+     "start_time": "2022-09-11T20:17:22.415315Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([233796, 149047, 560999, 927202, 418833])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_dim_array[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:16:12.159638Z",
+     "start_time": "2022-09-11T20:16:12.152406Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def linearSearch2d (arr, target):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr[i])):\n",
+    "            if (arr[i][j] == target):\n",
+    "                return [i, j]\n",
+    "    return [-1, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:17:29.842546Z",
+     "start_time": "2022-09-11T20:17:29.838602Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Driver code\n",
+    "target = 418833"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:17:31.451168Z",
+     "start_time": "2022-09-11T20:17:31.013782Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ans = linearSearch2d(two_dim_array, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:17:34.228711Z",
+     "start_time": "2022-09-11T20:17:34.223329Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element found at index: [199999 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Element found at index: [{ans[0]} {ans[1]}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:23:30.108308Z",
+     "start_time": "2022-09-11T20:23:29.959369Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[     0,      1,      2,      3,      4],\n",
+       "       [     5,      6,      7,      8,      9],\n",
+       "       [    10,     11,     12,     13,     14],\n",
+       "       ...,\n",
+       "       [999985, 999986, 999987, 999988, 999989],\n",
+       "       [999990, 999991, 999992, 999993, 999994],\n",
+       "       [999995, 999996, 999997, 999998, 999999]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_2d = np.reshape(list(range(1_000_000)), (-1, 5))\n",
+    "sorted_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:19:08.136792Z",
+     "start_time": "2022-09-11T20:19:08.130654Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Binary Search on sorted 2D array\n",
+    "def findAns(arr, target):\n",
+    "    row = 0\n",
+    "    col = len(arr[row]) - 1\n",
+    "    while (row < len(arr) and col >= 0):\n",
+    "        if (arr[row][col] == target):\n",
+    "            return [row, col]\n",
+    "\n",
+    "        # Target lies in further row\n",
+    "        if (arr[row][col] < target):\n",
+    "            row += 1\n",
+    "\n",
+    "        # Target lies in previous column\n",
+    "        else:\n",
+    "            col -= 1\n",
+    "\n",
+    "    return [-1, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:19:31.100785Z",
+     "start_time": "2022-09-11T20:19:31.097457Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Driver Code\n",
+    "ans = findAns(two_dim_array, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:19:39.668332Z",
+     "start_time": "2022-09-11T20:19:39.662808Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element found at index:  [-1, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Element found at index: \", ans)"
    ]
   },
   {
