search tests complete

--- a/Portfolio Project/Portfolio_project_test.ipynb
+++ b/Portfolio Project/Portfolio_project_test.ipynb
@@ -1575,40 +1575,51 @@
     "    while (row < len(arr) and col >= 0):\n",
     "        if (arr[row][col] == target):\n",
     "            return [row, col]\n",
-    "\n",
     "        # Target lies in further row\n",
     "        if (arr[row][col] < target):\n",
     "            row += 1\n",
-    "\n",
     "        # Target lies in previous column\n",
     "        else:\n",
     "            col -= 1\n",
-    "\n",
     "    return [-1, -1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-11T20:19:31.100785Z",
-     "start_time": "2022-09-11T20:19:31.097457Z"
+     "end_time": "2022-09-11T20:24:51.368143Z",
+     "start_time": "2022-09-11T20:24:51.364515Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "target = 700100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:24:52.881425Z",
+     "start_time": "2022-09-11T20:24:52.731813Z"
     }
    },
    "outputs": [],
    "source": [
     "# Driver Code\n",
-    "ans = findAns(two_dim_array, target)"
+    "ans = findAns(sorted_2d, target)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-11T20:19:39.668332Z",
-     "start_time": "2022-09-11T20:19:39.662808Z"
+     "end_time": "2022-09-11T20:24:55.906612Z",
+     "start_time": "2022-09-11T20:24:55.900973Z"
     }
    },
    "outputs": [
@@ -1616,7 +1627,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Element found at index:  [-1, -1]\n"
+      "Element found at index:  [140020, 0]\n"
      ]
     }
    ],
