--- a/Portfolio Project/Portfolio_project_test.ipynb
+++ b/Portfolio Project/Portfolio_project_test.ipynb
@@ -1527,11 +1527,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-11T20:23:30.108308Z",
-     "start_time": "2022-09-11T20:23:29.959369Z"
+     "end_time": "2022-09-11T20:37:35.144813Z",
+     "start_time": "2022-09-11T20:37:34.304914Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "unsorted = random.sample(range(1_000_000), 1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:38:03.501586Z",
+     "start_time": "2022-09-11T20:38:03.122531Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sorted_2d = sorted(unsorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-11T20:38:20.359854Z",
+     "start_time": "2022-09-11T20:38:20.271412Z"
     }
    },
    "outputs": [
@@ -1547,13 +1575,13 @@
        "       [999995, 999996, 999997, 999998, 999999]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted_2d = np.reshape(list(range(1_000_000)), (-1, 5))\n",
+    "sorted_2d = np.reshape(sorted_2d, (-1, 5))\n",
     "sorted_2d"
    ]
   },
@@ -1586,11 +1614,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-11T20:24:51.368143Z",
-     "start_time": "2022-09-11T20:24:51.364515Z"
+     "end_time": "2022-09-11T20:38:26.940365Z",
+     "start_time": "2022-09-11T20:38:26.936232Z"
     }
    },
    "outputs": [],
@@ -1600,11 +1628,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-11T20:24:52.881425Z",
-     "start_time": "2022-09-11T20:24:52.731813Z"
+     "end_time": "2022-09-11T20:38:27.264243Z",
+     "start_time": "2022-09-11T20:38:27.122394Z"
     }
    },
    "outputs": [],
@@ -1615,11 +1643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-11T20:24:55.906612Z",
-     "start_time": "2022-09-11T20:24:55.900973Z"
+     "end_time": "2022-09-11T20:38:29.290723Z",
+     "start_time": "2022-09-11T20:38:29.283516Z"
     }
    },
    "outputs": [
